<?xml version="1.0"?>
<package>
  <name>hackev_control</name>
  <version>0.0.0</version>
  <description>The hackev_control package</description>

  <maintainer email="abe@example.com">Yusaku Abe</maintainer>

  <license>BSD</license>

  <author email="abe@example.com">Yusaku Abe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <!--<build_depend>ev3dev</build_depend>-->

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ev3dev</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>

  <export>
  </export>

</package>
