<?xml version="1.0"?>
<package>
  <name>hackev_description</name>
  <version>0.0.0</version>
  <description>The hackev_description package</description>

  <maintainer email="abe@example.com">Yusaku Abe</maintainer>

  <license>BSD</license>

  <author email="abe@example.com">Yusaku Abe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
